--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
   "dependencies": {
     "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.7.2",
-    "plasmo": "0.82.0",
+    "plasmo": "^0.82.0",
     "vue": "^3.3.4",
     "wanakana": "^5.1.0"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "4.1.0",
-    "@types/chrome": "0.0.241",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@microsoft/tsdoc": "^0.14.2",
+    "@types/chrome": "^0.0.243",
     "@types/wanakana": "^4.0.3",
     "husky": "^8.0.3",
-    "prettier": "3.0.0",
+    "prettier": "^3.0.1",
     "pretty-quick": "^3.1.3",
-    "typescript": "5.1.6"
+    "typescript": "^5.1.6"
   },
   "manifest": {
     "host_permissions": [
