--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "dependencies": {
     "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.7.2",
+    "kurokanji": "^1.2.4",
     "plasmo": "^0.82.0",
+    "svgo": "^3.0.2",
     "vue": "^3.3.4",
-    "wanakana": "^5.1.0",
-    "svgo": "^3.0.2"
+    "wanakana": "^5.1.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
