--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "furigana-plus",
-  "displayName": "Furigana Plus",
+  "name": "furigana-maker",
+  "displayName": "Furigana Maker",
   "version": "1.0.0",
   "type": "module",
   "private": true,
@@ -18,14 +18,13 @@
     "test": "plasmo test",
     "prepare": "husky install",
     "format": "prettier --check --write .",
-    "lint": "eslint ."
+    "lint": "tsc --noEmit --incremental false"
   },
   "dependencies": {
     "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.7.2",
     "kurokanji": "^1.2.4",
     "plasmo": "^0.82.0",
-    "svgo": "^3.0.2",
     "vue": "^3.3.4",
     "wanakana": "^5.1.0"
   },
@@ -33,9 +32,6 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@types/chrome": "^0.0.243",
     "@types/wanakana": "^4.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^6.2.1",
-    "eslint": "^8.46.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.1",
     "pretty-quick": "^3.1.3",
