--- a/package.json
+++ b/package.json
@@ -25,17 +25,20 @@
     "@plasmohq/storage": "^1.7.2",
     "kurokanji": "^1.2.4",
     "plasmo": "^0.82.0",
+    "tinycolor2": "^1.6.0",
     "vue": "^3.3.4",
     "wanakana": "^5.1.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@types/chrome": "^0.0.243",
+    "@types/tinycolor2": "^1.4.3",
     "@types/wanakana": "^4.0.3",
     "husky": "^8.0.3",
     "prettier": "^3.0.1",
     "pretty-quick": "^3.1.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vuetify": "^3.3.12"
   },
   "manifest": {
     "host_permissions": [
