--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "author": "aiktb <hey@aiktb.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aiktb/furigana-plus.git"
+    "url": "git+https://github.com/aiktb/FuriganaMaker.git"
   },
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
     "debug": "plasmo dev --verbose",
-    "test": "plasmo test",
+    "test": "jest",
     "prepare": "husky install",
     "format": "prettier --check --write .",
     "lint": "tsc --noEmit --incremental false"
@@ -23,26 +23,26 @@
   "dependencies": {
     "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.7.2",
-    "kurokanji": "^1.2.4",
     "plasmo": "^0.82.0",
-    "tinycolor2": "^1.6.0",
     "vue": "^3.3.4",
     "wanakana": "^5.1.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@types/chrome": "^0.0.243",
-    "@types/tinycolor2": "^1.4.3",
     "@types/wanakana": "^4.0.3",
+    "@types/jest": "^29.5.3",
+    "kuromojin": "^3.0.0",
     "husky": "^8.0.3",
     "prettier": "^3.0.1",
     "pretty-quick": "^3.1.3",
-    "typescript": "^5.1.6",
-    "vuetify": "^3.3.12"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "manifest": {
     "host_permissions": [
-      "https://twitter.com/*"
+      "<all_urls>"
     ]
   }
 }
