--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
       "~*": ["./src/*"]
     },
     "baseUrl": ".",
+    /* https://github.com/kulshekhar/ts-jest/issues/4081 */
+    "verbatimModuleSyntax": false,
     /* Linting */
     "strict": true,
     "allowUnreachableCode": false,
