--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@iconify/vue": "^4.1.1",
     "@types/chrome": "^0.0.243",
-    "@types/wanakana": "^4.0.3",
     "@types/jest": "^29.5.3",
-    "kuromojin": "^3.0.0",
+    "@types/wanakana": "^4.0.3",
     "husky": "^8.0.3",
+    "kuromojin": "^3.0.0",
     "prettier": "^3.0.1",
     "pretty-quick": "^3.1.3",
     "ts-jest": "^29.1.1",
