--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
   "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.vue"],
   "compilerOptions": {
     "paths": {
-      "~*": ["./src/*"]
+      "~*": ["./src/*"],
+      "@Components/*": ["./src/popup/components/*"],
+      "@Icons/*": ["./assets/icons/*"]
     },
     "baseUrl": ".",
     /* https://github.com/kulshekhar/ts-jest/issues/4081 */
