--- a/package.json
+++ b/package.json
@@ -21,26 +21,23 @@
     "lint": "tsc --noEmit --incremental false"
   },
   "dependencies": {
-    "@plasmohq/messaging": "^0.5.0",
-    "@plasmohq/storage": "^1.7.2",
-    "plasmo": "^0.82.0",
-    "vue": "^3.3.4",
-    "wanakana": "^5.1.0"
-  },
-  "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@types/chrome": "^0.0.243",
     "@types/jest": "^29.5.3",
     "@types/wanakana": "^4.0.3",
+    "@plasmohq/messaging": "^0.5.0",
+    "@plasmohq/storage": "^1.7.2",
     "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
     "husky": "^8.0.3",
     "kuromojin": "^3.0.0",
+    "plasmo": "^0.82.0",
     "prettier": "^3.0.1",
     "pretty-quick": "^3.1.3",
     "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vue": "^3.3.4",
+    "wanakana": "^5.1.0"
   },
   "manifest": {
     "permissions": [
