--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "dev": "plasmo dev",
-    "build": "plasmo build",
+    "build:chrome": "plasmo build --target=chrome-mv3",
+    "build:firefox": "plasmo build --target=firefox-mv2",
     "package": "plasmo package",
     "debug": "plasmo dev --verbose",
     "test": "jest",
@@ -22,23 +23,25 @@
     "lint": "tsc --noEmit --incremental false"
   },
   "dependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.7.2",
-    "@types/chrome": "^0.0.243",
-    "@types/jest": "^29.5.3",
-    "@types/wanakana": "^4.0.3",
     "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
-    "husky": "^8.0.3",
-    "kuromojin": "^3.0.0",
     "plasmo": "^0.82.1",
-    "prettier": "^3.0.1",
-    "pretty-quick": "^3.1.3",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6",
     "vue": "^3.3.4",
     "wanakana": "^5.1.0"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@types/chrome": "^0.0.243",
+    "@types/jest": "^29.5.3",
+    "@types/wanakana": "^4.0.3",
+    "husky": "^8.0.3",
+    "kuromojin": "^3.0.0",
+    "prettier": "^3.0.1",
+    "pretty-quick": "^3.1.3",
+    "ts-jest": "^29.1.1"
   },
   "manifest": {
     "permissions": [
