--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@plasmohq/storage": "^1.7.2",
     "@vueuse/components": "^10.3.0",
     "@vueuse/core": "^10.3.0",
+    "@vueuse/math": "^10.4.0",
     "plasmo": "^0.82.1",
+    "tinycolor2": "^1.6.0",
     "typescript": "^5.1.6",
     "vue": "^3.3.4",
     "wanakana": "^5.1.0"
@@ -36,6 +38,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
     "@types/chrome": "^0.0.243",
     "@types/jest": "^29.5.3",
+    "@types/tinycolor2": "^1.4.3",
     "@types/wanakana": "^4.0.3",
     "husky": "^8.0.3",
     "kuromojin": "^3.0.0",
