--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "~*": ["./src/*"],
       "@Components/*": ["./src/popup/components/*"],
+      "@Composables/*": ["./src/popup/composables/*"],
       "@Icons/*": ["./assets/icons/*"]
     },
     "baseUrl": ".",
