refactor: incorporate event handling logic.

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   },
   "manifest": {
     "permissions": [
-      "contextMenus"
+      "contextMenus",
+      "activeTab"
     ],
     "commands": {
       "addFurigana": {
