--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "dependencies": {
     "@plasmohq/messaging": "^0.5.0",
-    "@plasmohq/storage": "^1.7.2",
+    "@plasmohq/storage": "^1.8.0",
+    "@sglkc/kuromoji": "^1.0.1",
     "@vueuse/core": "^10.4.1",
-    "plasmo": "^0.82.5",
+    "plasmo": "^0.83.0",
     "tinycolor2": "^1.6.0",
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
@@ -67,6 +68,16 @@
           "default": "Alt+Shift+X"
         }
       }
-    }
+    },
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "assets/dict/*.dat.gz"
+        ],
+        "matches": [
+          "https://*/*"
+        ]
+      }
+    ]
   }
 }
