--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "scripts": {
     "dev": "plasmo dev",
+    "dev:firefox": "plasmo dev --target=firefox-mv2",
+    "debug": "plasmo dev --verbose",
+    "debug:firefox": "plasmo dev --target=firefox-mv2 --verbose",
     "build": "plasmo build",
     "build:firefox": "plasmo build --target=firefox-mv2",
     "package": "plasmo package",
-    "debug": "plasmo dev --verbose",
+    "package:firefox": "plasmo package --target=firefox-mv2",
     "test": "jest",
     "prepare": "husky install",
     "format": "prettier --check --write .",
@@ -31,7 +34,8 @@
     "tinycolor2": "^1.6.0",
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
-    "wanakana": "^5.1.0"
+    "wanakana": "^5.1.0",
+    "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
@@ -39,6 +43,7 @@
     "@types/jest": "^29.5.4",
     "@types/tinycolor2": "^1.4.3",
     "@types/wanakana": "^4.0.3",
+    "@types/webextension-polyfill": "^0.10.2",
     "husky": "^8.0.3",
     "kuromojin": "^3.0.0",
     "prettier": "^3.0.3",
