--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@plasmohq/storage": "^1.8.0",
     "@sglkc/kuromoji": "^1.0.1",
     "@vueuse/core": "^10.4.1",
+    "detect-browser": "^5.3.0",
     "plasmo": "^0.83.0",
     "tinycolor2": "^1.6.0",
     "typescript": "^5.2.2",
