--- a/package.json
+++ b/package.json
@@ -62,15 +62,9 @@
     "commands": {
       "addFurigana": {
         "suggested_key": {
-          "default": "Alt+Shift+A"
+          "default": "Alt+Shift+F"
         },
         "description": "Add furigana on the current page."
-      },
-      "switchDisplay": {
-        "suggested_key": {
-          "default": "Alt+Shift+H"
-        },
-        "description": "Hide furigana on all pages."
       },
       "_execute_action": {
         "suggested_key": {
