--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/wanakana": "^4.0.4",
     "@types/webextension-polyfill": "^0.10.4",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "kuromojin": "^3.0.0",
     "prettier": "^3.0.3",
     "pretty-quick": "^3.1.3",
