feat: default website rules config file

--- a/package.json
+++ b/package.json
@@ -89,6 +89,14 @@
         "matches": [
           "https://*/*"
         ]
+      },
+      {
+        "resources": [
+          "assets/rules.json"
+        ],
+        "matches": [
+          "http://*/*"
+        ]
       }
     ]
   }
