--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@iconify/vue": "^4.1.1",
     "@types/chrome": "^0.0.243",
     "@types/jest": "^29.5.5",
     "@types/tinycolor2": "^1.4.4",
