--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "jest",
     "prepare": "husky install",
     "format": "prettier --check --write .",
-    "lint": "tsc --noEmit --incremental false"
+    "lint": "eslint --ext .ts,.vue src/**/* test/**/*"
   },
   "dependencies": {
     "@plasmohq/messaging": "^0.5.0",
@@ -50,6 +50,11 @@
     "@types/tinycolor2": "^1.4.4",
     "@types/wanakana": "^4.0.4",
     "@types/webextension-polyfill": "^0.10.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-vue": "^9.17.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "kuromojin": "^3.0.0",
