--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "kuromojin": "^3.0.0",
+    "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
     "pretty-quick": "^3.1.3",
     "ts-jest": "^29.1.1",
