build: integrate jest with lint-staged

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,5 @@
 {
   "*": "prettier --write",
-  "*.{ts, vue}": "eslint"
+  "*.{ts, vue}": "eslint",
+  "*.ts": "jest --bail --findRelatedTests --passWithNoTests"
 }
