--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,6 @@
 {
-  "*": "prettier --write",
+  "*.svg": "prettier --write --parser html",
+  "*.{json, md, vue, html, ts}": "prettier --write",
   "*.{ts, vue}": "eslint",
   "*.ts": "jest --bail --findRelatedTests --passWithNoTests"
 }
