--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "web_accessible_resources": [
       {
         "resources": [
-          "assets/dict/*.dat.gz"
+          "assets/dicts/*.dat.gz"
         ],
         "matches": [
           "https://*/*"
