--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sglkc/kuromoji": "^1.1.0",
     "@vueuse/core": "^10.4.1",
     "plasmo": "^0.83.0",
+    "tailwindcss": "^3.3.3",
     "tinycolor2": "^1.6.0",
     "typescript": "^5.2.2",
     "vue": "^3.3.4",
@@ -52,6 +53,7 @@
     "@types/webextension-polyfill": "^0.10.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.17.0",
@@ -59,7 +61,9 @@
     "jest": "^29.7.0",
     "kuromojin": "^3.0.0",
     "lint-staged": "^14.0.1",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.5",
     "pretty-quick": "^3.1.3",
     "ts-jest": "^29.1.1",
     "web-ext": "^7.8.0"
