--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "debug:firefox": "plasmo dev --target=firefox-mv2 --verbose",
     "build": "plasmo build",
     "build:firefox": "plasmo build --target=firefox-mv2",
-    "start": "web-ext run --source-dir ./build/chrome-mv3-dev -t chromium",
+    "start": "web-ext run --source-dir ./build/chrome-mv3-dev -t chromium --start-url chrome://newtab",
     "start:firefox": "web-ext run --source-dir ./build/firefox-mv2-dev",
     "package": "plasmo package",
     "package:firefox": "plasmo package --target=firefox-mv2",
