--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,6 @@
 {
   "*.svg": "prettier --write --parser html",
   "*.{json, md, vue, html, ts}": "prettier --write",
-  "*.{ts, vue}": "eslint",
+  "*.{ts, vue}": "eslint --fix",
   "*.ts": "jest --bail --findRelatedTests --passWithNoTests"
 }
