--- a/package.json
+++ b/package.json
@@ -74,8 +74,7 @@
   },
   "manifest": {
     "permissions": [
-      "contextMenus",
-      "activeTab"
+      "contextMenus"
     ],
     "commands": {
       "_execute_action": {
