--- a/package.json
+++ b/package.json
@@ -19,6 +19,20 @@
   "bugs": {
     "url": "https://github.com/aiktb/FuriganaMaker/issues"
   },
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "svgo": "2.8.0",
+        "node-fetch": "3.3.1"
+      }
+    },
+    "allowedDeprecatedVersions": {
+      "har-validator": "5.1.5",
+      "request": "2.88.2",
+      "stable": "0.1.8",
+      "uuid": "3.4.0"
+    }
+  },
   "scripts": {
     "dev": "plasmo dev",
     "dev:firefox": "plasmo dev --target=firefox-mv2",
@@ -59,7 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.52.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.18.1",
     "husky": "^8.0.3",
