--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "start:firefox": "web-ext run --source-dir ./build/firefox-mv2-dev",
     "package": "plasmo package",
     "package:firefox": "plasmo package --target=firefox-mv2",
-    "test": "jest",
+    "test": "vitest",
     "prepare": "husky install",
     "format": "prettier --check --write .",
     "lint": "eslint --ext .ts,.vue src/**/* test/**/*"
@@ -66,7 +66,6 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@iconify/vue": "^4.1.1",
     "@types/chrome": "^0.0.243",
-    "@types/jest": "^29.5.8",
     "@types/tinycolor2": "^1.4.6",
     "@types/wanakana": "^4.0.6",
     "@types/webextension-polyfill": "^0.10.6",
@@ -77,13 +76,12 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.18.1",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
     "kuromojin": "^3.0.0",
     "lint-staged": "^14.0.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "ts-jest": "^29.1.1",
+    "vitest": "^0.34.6",
     "web-ext": "^7.8.0"
   },
   "manifest": {
