--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,6 @@
   "rules": {
     "vue/no-v-html": "off",
     "vue/comment-directive": "off",
-    "vue/multi-word-component-names": ["error", { "ignores": ["index"] }]
+    "vue/multi-word-component-names": "off"
   }
 }
