feat: complete the new rule menu

--- a/package.json
+++ b/package.json
@@ -46,23 +46,23 @@
     "test": "vitest",
     "prepare": "husky install",
     "format": "prettier --check --write .",
-    "lint": "eslint --ext .ts,.vue src/**/* test/**/*"
+    "lint": "eslint --ext .ts,.vue src/**/* test/**/*",
+    "type-check": "tsc --noEmit && vue-tsc --noEmit"
   },
   "dependencies": {
+    "@headlessui/tailwindcss": "^0.2.0",
     "@headlessui/vue": "^1.7.16",
     "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.9.0",
     "@sglkc/kuromoji": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@types/file-saver": "^2.0.7",
-    "@vueuse/core": "^10.6.0",
+    "@vueuse/core": "^10.6.1",
     "file-saver": "^2.0.5",
     "plasmo": "^0.84.0",
     "tailwindcss": "^3.3.5",
     "tinycolor2": "^1.6.0",
-    "typescript": "^5.2.2",
     "vue": "^3.3.8",
-    "wanakana": "^5.2.0",
+    "wanakana": "^5.3.1",
     "webextension-polyfill": "^0.10.0",
     "zod": "^3.22.4"
   },
@@ -70,22 +70,25 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@iconify/vue": "^4.1.1",
     "@types/chrome": "^0.0.243",
+    "@types/file-saver": "^2.0.7",
     "@types/tinycolor2": "^1.4.6",
     "@types/wanakana": "^4.0.6",
     "@types/webextension-polyfill": "^0.10.6",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.18.1",
     "husky": "^8.0.3",
     "kuromojin": "^3.0.0",
     "lint-staged": "^14.0.1",
     "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
+    "typescript": "^5.3.2",
     "vitest": "^0.34.6",
+    "vue-tsc": "^1.8.22",
     "web-ext": "^7.8.0"
   },
   "manifest": {
