--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,5 +19,9 @@ jobs:
           cache: 'pnpm'
           cache-dependency-path: 'pnpm-lock.yaml'
       - run: pnpm install --frozen-lockfile
+      # This generates the type files necessary for `sendToBackground`.
+      # https://github.com/PlasmoHQ/plasmo/issues/528#issuecomment-1510146052
+      - run: pnpm build
+
       - run: pnpm lint
       - run: pnpm type-check
