refactor: migrate from Vue to React (#14)
* refactor: migrate from Vue to React

* refactor: update eslint to flat config

* chore: "trailingComma": "all" & "semi": true

* feat: all popup components except ColorPicker have been transplanted

* fix: unsafe external link

* refactor: tailwind @base use 'CSS in JS'

* feat: complete the popup transplantation

* feat: options page completed

* style: adjust popup transition

* chore: update ColorPicker with new color options

* refactor: wrap `Browser.tabs.sendMessage` to remove useless warnings

* fix: update rule not work

---------

Co-authored-by: aiktb <hey@aiktb.com>

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,9 +2,9 @@
   "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
-  "semi": false,
+  "semi": true,
   "singleQuote": true,
-  "trailingComma": "none",
+  "trailingComma": "all",
   "bracketSpacing": true,
   "bracketSameLine": false,
   "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
@@ -19,6 +19,8 @@
     "^@plasmohq/(.*)$",
     "",
     "^~(.*)$",
+    "",
+    "^react:(.*)$",
     "",
     "^[./]"
   ]
