--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "description": "Add furigana to Japanese text for any web page.",
   "license": "MIT",
-  "author": "aiktb <hey@aiktb.com>",
+  "author": "aiktb <hey@aiktb.dev>",
   "engines": {
     "node": ">=20.0.0"
   },
@@ -46,22 +46,23 @@
     "test": "vitest",
     "prepare": "husky install",
     "format": "prettier --check --write .",
-    "lint": "eslint --ext .ts,.vue src/ test/",
-    "type-check": "tsc --noEmit && vue-tsc --noEmit"
+    "lint": "eslint --fix .",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.16",
-    "@iconify/vue": "^4.1.1",
+    "@headlessui/react": "^1.7.17",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@iconify/react": "^4.1.1",
     "@plasmohq/messaging": "^0.5.0",
     "@plasmohq/storage": "^1.9.0",
     "@sglkc/kuromoji": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
-    "@vueuse/core": "^10.6.1",
     "file-saver": "^2.0.5",
     "plasmo": "^0.84.0",
-    "tailwindcss": "^3.3.5",
+    "react": "18.3.0-canary-c5b937576-20231219",
+    "react-dom": "18.3.0-canary-c5b937576-20231219",
+    "tailwindcss": "^3.4.0",
     "tinycolor2": "^1.6.0",
-    "vue": "^3.3.8",
     "wanakana": "^5.3.1",
     "webextension-polyfill": "^0.10.0",
     "zod": "^3.22.4"
@@ -70,25 +71,28 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/chrome": "^0.0.243",
     "@types/file-saver": "^2.0.7",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "@types/tinycolor2": "^1.4.6",
     "@types/wanakana": "^4.0.6",
-    "@types/webextension-polyfill": "^0.10.6",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
+    "@types/webextension-polyfill": "^0.10.7",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-vue": "^9.18.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "globals": "^13.24.0",
     "husky": "^8.0.3",
     "kuromojin": "^3.0.0",
     "lint-staged": "^14.0.1",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "typescript": "^5.3.2",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "typescript": "^5.3.3",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.22",
-    "web-ext": "^7.8.0"
+    "web-ext": "^7.9.0"
   },
   "manifest": {
     "permissions": [
