--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "plasmo/templates/tsconfig.base",
   "exclude": ["node_modules"],
-  "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.vue"],
+  "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.tsx"],
   "compilerOptions": {
     "paths": {
-      "~*": ["./src/*"],
-      "@Icons/*": ["./assets/icons/*"]
+      "~*": ["./src/*"]
     },
+    "types": ["react/canary", "react-dom/canary"],
     /* Linting */
     "strict": true,
     "allowUnreachableCode": false,
