--- a/package.json
+++ b/package.json
@@ -116,10 +116,10 @@
         "description": "Show furigana on all pages"
       },
       "openHoverMode": {
-        "description": "Open hover-Gap mode on all pages"
+        "description": "Open hover gap mode on all pages"
       },
       "openHoverNoGapMode": {
-        "description": "Open hover-NoGap mode on all pages"
+        "description": "Open hover no-gap mode on all pages"
       }
     },
     "web_accessible_resources": [
