--- a/package.json
+++ b/package.json
@@ -44,25 +44,25 @@
     "package": "plasmo package",
     "package:firefox": "plasmo package --target=firefox-mv2",
     "test": "vitest",
-    "prepare": "husky install",
+    "prepare": "husky",
     "format": "prettier --check --write .",
     "lint": "eslint --fix .",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
+    "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@iconify/react": "^4.1.1",
-    "@plasmohq/messaging": "^0.5.0",
+    "@plasmohq/messaging": "^0.6.1",
     "@plasmohq/storage": "^1.9.0",
     "@sglkc/kuromoji": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "detect-browser": "^5.3.0",
     "file-saver": "^2.0.5",
-    "plasmo": "^0.84.0",
-    "react": "18.3.0-canary-c5b937576-20231219",
-    "react-dom": "18.3.0-canary-c5b937576-20231219",
-    "tailwindcss": "^3.4.0",
+    "plasmo": "^0.84.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.1",
     "tinycolor2": "^1.6.0",
     "wanakana": "^5.3.1",
     "webextension-polyfill": "^0.10.0",
@@ -70,30 +70,30 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/chrome": "^0.0.243",
+    "@types/chrome": "^0.0.258",
     "@types/file-saver": "^2.0.7",
-    "@types/react": "^18.2.45",
+    "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/tinycolor2": "^1.4.6",
     "@types/wanakana": "^4.0.6",
     "@types/webextension-polyfill": "^0.10.7",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "autoprefixer": "^10.4.16",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
+    "@typescript-eslint/parser": "^6.19.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^13.24.0",
-    "husky": "^8.0.3",
+    "husky": "^9.0.3",
     "kuromojin": "^3.0.0",
-    "lint-staged": "^14.0.1",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prettier-plugin-tailwindcss": "^0.5.9",
+    "lint-staged": "^15.2.0",
+    "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "^5.3.3",
-    "vitest": "^0.34.6",
-    "web-ext": "^7.9.0"
+    "vitest": "^1.2.1",
+    "web-ext": "^7.11.0"
   },
   "manifest": {
     "permissions": [
