style: center the popup in the window
Former-commit-id: 7d0d43c9085399beb8e55376e9652cda754a7d8c

--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "detect-browser": "^5.3.0",
     "file-saver": "^2.0.5",
     "plasmo": "^0.84.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.0-canary-c5b937576-20231219",
+    "react-dom": "18.3.0-canary-c5b937576-20231219",
     "tailwindcss": "^3.4.1",
     "tinycolor2": "^1.6.0",
     "wanakana": "^5.3.1",
