--- a/package.json
+++ b/package.json
@@ -60,9 +60,10 @@
     "@tailwindcss/forms": "^0.5.7",
     "detect-browser": "^5.3.0",
     "file-saver": "^2.0.5",
-    "plasmo": "^0.84.1",
+    "plasmo": "^0.84.2",
     "react": "18.3.0-canary-c5b937576-20231219",
     "react-dom": "18.3.0-canary-c5b937576-20231219",
+    "react-share": "^5.0.3",
     "tailwindcss": "^3.4.1",
     "tinycolor2": "^1.6.0",
     "wanakana": "^5.3.1",
