chore: dump deps
Former-commit-id: c73a5d60fe5b4d3c7aed1aa0bf89223864b0810b

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "furigana-maker",
   "displayName": "Furigana Maker",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "type": "module",
   "private": true,
-  "description": "Add furigana to Japanese text for any web page.",
+  "description": "Add furigana to Japanese text on any page for learning kanji pronunciation.",
   "license": "MIT",
   "author": "aiktb <hey@aiktb.dev>",
   "engines": {
