--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@aiktb/kuromoji": "^1.0.1",
     "@floating-ui/react": "^0.26.7",
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@iconify/react": "^4.1.1",
     "@plasmohq/messaging": "^0.6.1",
     "@plasmohq/storage": "^1.9.0",
-    "@sglkc/kuromoji": "^1.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "detect-browser": "^5.3.0",
     "file-saver": "^2.0.5",
@@ -118,7 +118,7 @@
     "web_accessible_resources": [
       {
         "resources": [
-          "assets/dicts/*.dat.gz"
+          "assets/dicts/*.dat"
         ],
         "matches": [
           "https://*/*"
