fix(ci): using `eslint --fix` will cause inconsistencies (#32)
* chore: format

* fix(ci): using eslint --fix will cause inconsistencies

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,5 +23,5 @@ jobs:
       # https://github.com/PlasmoHQ/plasmo/issues/528#issuecomment-1510146052
       - run: pnpm build
 
-      - run: pnpm lint
+      - run: pnpm eslint .
       - run: pnpm type-check
