refactor: change to bun from pnpm (#34)
* refactor: change to bun from pnpm

* chore: migrate from vitest to bun:test

* fix(ci): `"bun build"  !== "bun run build"`

* refactor: migrate to biome

* refactor: combine plasmo build and package commands for `bun run package`

* refactor: reduce unnecessary content script registration

* chore: update lock file

* refactor: use @ctrl/tinycolor instead of tinycolor2

* chore: rename `build` command to `make` to prevent conflicts with bun

* fix: `TinyColor.isValid` not a function

* refactor: simplify the packaging command

* chore: add description for package command

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,6 +1,3 @@
 {
-  "*.svg": "prettier --write --parser html",
-  "*.{json,md,html,ts,tsx,css}": "prettier --write",
-  "*.{ts,tsx}": "eslint --fix",
-  "*.ts": "vitest run related --passWithNoTests"
+  "*.{ts,tsx,js,json}": "biome check --apply --no-errors-on-unmatched --error-on-warnings"
 }
