--- a/package.json
+++ b/package.json
@@ -14,89 +14,61 @@
   "bugs": {
     "url": "https://github.com/aiktb/FuriganaMaker/issues"
   },
-  "pnpm": {
-    "peerDependencyRules": {
-      "allowedVersions": {
-        "svgo": "2.8.0",
-        "node-fetch": "3.3.1"
-      }
-    },
-    "allowedDeprecatedVersions": {
-      "har-validator": "5.1.5",
-      "request": "2.88.2",
-      "stable": "0.1.8",
-      "uuid": "3.4.0"
-    }
-  },
   "scripts": {
     "dev": "plasmo dev",
     "dev:firefox": "plasmo dev --target=firefox-mv2",
     "debug": "plasmo dev --verbose",
     "debug:firefox": "plasmo dev --target=firefox-mv2 --verbose",
-    "build": "plasmo build",
-    "build:firefox": "plasmo build --target=firefox-mv2",
+    "make": "plasmo build",
+    "make:firefox": "plasmo build --target=firefox-mv2",
     "start": "web-ext run --source-dir ./build/chrome-mv3-dev -t chromium --start-url chrome://newtab",
     "start:firefox": "web-ext run --source-dir ./build/firefox-mv2-dev",
-    "package": "plasmo package",
-    "package:firefox": "plasmo package --target=firefox-mv2",
-    "test": "vitest",
+    "package": "bun make --zip",
+    "package:firefox": "bun make:firefox --zip",
     "prepare": "husky",
-    "format": "prettier --check --write .",
-    "lint": "eslint --fix .",
-    "type-check": "tsc --noEmit"
+    "format": "biome format --write .",
+    "lint": "biome check .",
+    "lint:fix": "biome check --apply .",
+    "type-check": "tsc"
   },
   "dependencies": {
     "@aiktb/kuromoji": "^1.0.2",
-    "@floating-ui/react": "^0.26.7",
+    "@ctrl/tinycolor": "^4.0.3",
+    "@floating-ui/react": "^0.26.10",
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
     "@iconify/react": "^4.1.1",
-    "@plasmohq/messaging": "^0.6.1",
-    "@plasmohq/storage": "^1.9.0",
+    "@plasmohq/messaging": "^0.6.2",
+    "@plasmohq/storage": "^1.9.3",
     "@tailwindcss/forms": "^0.5.7",
     "detect-browser": "^5.3.0",
     "file-saver": "^2.0.5",
-    "plasmo": "^0.85.0",
+    "plasmo": "^0.85.2",
     "react": "18.3.0-canary-c5b937576-20231219",
     "react-dom": "18.3.0-canary-c5b937576-20231219",
-    "react-share": "^5.0.3",
-    "tailwindcss": "^3.4.1",
-    "tinycolor2": "^1.6.0",
+    "react-share": "^5.1.0",
+    "tailwindcss": "^3.4.3",
     "wanakana": "^5.3.1",
     "webextension-polyfill": "^0.10.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/chrome": "^0.0.258",
+    "@biomejs/biome": "1.6.4",
+    "@types/bun": "^1.0.12",
     "@types/file-saver": "^2.0.7",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@types/tinycolor2": "^1.4.6",
-    "@types/wanakana": "^4.0.6",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.23",
     "@types/webextension-polyfill": "^0.10.7",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "globals": "^13.24.0",
-    "husky": "^9.0.6",
+    "autoprefixer": "^10.4.19",
+    "husky": "^9.0.11",
     "kuromojin": "^3.0.0",
-    "lint-staged": "^15.2.0",
-    "postcss": "^8.4.33",
-    "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.1",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8.4.38",
+    "typescript": "^5.4.3",
     "web-ext": "^7.11.0"
   },
   "manifest": {
-    "permissions": [
-      "contextMenus"
-    ],
+    "permissions": ["contextMenus"],
     "commands": {
       "addFurigana": {
         "description": "Add furigana on the current page"
@@ -127,9 +99,7 @@
           "@aiktb/kuromoji/dict/unk_map.dat",
           "@aiktb/kuromoji/dict/unk_pos.dat"
         ],
-        "matches": [
-          "https://*/*"
-        ]
+        "matches": ["https://*/*"]
       }
     ]
   }
