--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,9 @@
   "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.tsx"],
   "compilerOptions": {
     "paths": {
-      "~*": ["./src/*"],
+      "~*": ["./src/*"]
     },
-    "types": ["react/canary", "react-dom/canary"],
+    "types": ["react/canary", "react-dom/canary", "bun"],
     /* Linting */
     "strict": true,
     "allowUnreachableCode": false,
@@ -17,6 +17,6 @@
     "noImplicitReturns": true,
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
-  },
+    "noUnusedParameters": true
+  }
 }
