ci: reintroduce `submit.yml` (#41)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
         with:
-          bun-version: 1.1.0
+          bun-version: latest
       - run: bun install --frozen-lockfile
       # This generates the type files necessary for `sendToBackground`.
       # https://github.com/PlasmoHQ/plasmo/issues/528#issuecomment-1510146052
