refactor: migrate from `@iconify/react` to `tailwindcss-icons` (#43)
* refactor: migrate from `@iconify/react` to `tailwindcss-icons`

* chore: remove `biome-ignore`

* chore: fix type-check

* chore: fix icon

--- a/package.json
+++ b/package.json
@@ -36,24 +36,24 @@
     "@ctrl/tinycolor": "^4.0.3",
     "@floating-ui/react": "^0.26.10",
     "@headlessui/react": "^1.7.18",
-    "@headlessui/tailwindcss": "^0.2.0",
-    "@iconify/react": "^4.1.1",
     "@plasmohq/messaging": "^0.6.2",
     "@plasmohq/storage": "^1.9.3",
-    "@tailwindcss/forms": "^0.5.7",
     "detect-browser": "^5.3.0",
     "file-saver": "^2.0.5",
     "plasmo": "^0.85.2",
     "react": "18.3.0-canary-c5b937576-20231219",
     "react-dom": "18.3.0-canary-c5b937576-20231219",
     "react-share": "^5.1.0",
-    "tailwindcss": "^3.4.3",
     "wanakana": "^5.3.1",
     "webextension-polyfill": "^0.10.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.6.4",
+    "@egoist/tailwindcss-icons": "^1.7.4",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@iconify/json": "^2.2.197",
+    "@tailwindcss/forms": "^0.5.7",
     "@types/bun": "^1.0.12",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.74",
@@ -64,6 +64,7 @@
     "kuromojin": "^3.0.0",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3",
     "web-ext": "^7.11.0"
   },
