--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "web-ext": "^7.11.0"
   },
   "manifest": {
-    "permissions": ["contextMenus"],
+    "permissions": ["contextMenus", "action"],
     "commands": {
       "addFurigana": {
         "description": "Add furigana on the current page"
