ci: synchronize the trigger of "submit" and "release" (#56)

--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -1,6 +1,9 @@
 name: 'Submit to Web Store'
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
