feat: official website "furiganamaker.app" (#60)
* feat: official website "furiganamaker.app"

* chore: remove useless code

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "furigana-maker",
   "displayName": "Furigana Maker",
+  "workspaces": ["website"],
   "version": "1.4.0",
   "type": "module",
   "private": true,
