--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,11 @@
   "exclude": ["node_modules"],
   "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.tsx"],
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "~*": ["./src/*"]
+      "~*": ["./src/*"],
+      // Only used to eliminate `tsc --noEmit` errors.
+      "@/*": ["./website/app/*"]
     },
     "types": ["react/canary", "react-dom/canary", "bun"],
     /* Linting */
