website: use SSR fetch github star (#64)
* website: use SSR fetch github star

* fix: node compatibility

* fix: github api 403

* perf: use fontsource to get a lower font FOUC

* chore: update deps and remove useless deps

* chore: add wrangler.toml

* Revert "chore: add wrangler.toml"

This reverts commit fdad31ee2eb7ea71afccb662ed11c92eed1f6c44.

* fix: lockfile had changes, but lockfile is frozen

--- a/website/package.json
+++ b/website/package.json
@@ -11,18 +11,21 @@
     "typegen": "wrangler types"
   },
   "dependencies": {
-    "@remix-run/cloudflare": "^2.8.1",
-    "@remix-run/cloudflare-pages": "^2.8.1",
-    "@remix-run/react": "^2.8.1",
-    "isbot": "^5.1.4"
+    "@remix-run/cloudflare": "^2.9.1",
+    "@remix-run/cloudflare-pages": "^2.9.1",
+    "@remix-run/react": "^2.9.1",
+    "isbot": "^5.1.5"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230518.0",
-    "@remix-run/dev": "^2.8.1",
-    "@remix-run/node": "^2.8.1",
-    "remix-development-tools": "^4.1.4",
+    "@cloudflare/workers-types": "^4.20240423.0",
+    "@fontsource/dm-sans": "^5.0.21",
+    "@fontsource/jetbrains-mono": "^5.0.20",
+    "@fontsource/lobster": "^5.0.20",
+    "@remix-run/css-bundle": "^2.9.1",
+    "@remix-run/dev": "^2.9.1",
+    "@remix-run/node": "^2.9.1",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "^3.24.0"
+    "wrangler": "^3.52.0"
   }
 }
