chore: revert build command (#66)
* chore: revert build command

* fix: not found "build" command

--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "dev:firefox": "plasmo dev --target=firefox-mv2",
     "debug": "plasmo dev --verbose",
     "debug:firefox": "plasmo dev --target=firefox-mv2 --verbose",
-    "make": "plasmo build",
-    "make:firefox": "plasmo build --target=firefox-mv2",
+    "build": "plasmo build",
+    "build:firefox": "plasmo build --target=firefox-mv2",
     "start": "web-ext run --source-dir ./build/chrome-mv3-dev -t chromium --start-url chrome://newtab",
     "start:firefox": "web-ext run --source-dir ./build/firefox-mv2-dev",
-    "package": "bun make --zip",
-    "package:firefox": "bun make:firefox --zip",
+    "package": "bun run build --zip",
+    "package:firefox": "bun run build:firefox --zip",
     "prepare": "husky",
     "format": "biome format --write .",
     "lint": "biome check .",
