--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - run: bun install --frozen-lockfile
       # This generates the type files necessary for `sendToBackground`.
       # https://github.com/PlasmoHQ/plasmo/issues/528#issuecomment-1510146052
-      - run: bun run make
+      - run: bun run build
       - run: bun run lint
       - run: bun run type-check
       - run: bun test
