--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,8 @@
 {
-  "recommendations": ["biomejs.biome", "antfu.iconify", "bradlc.vscode-tailwindcss"]
+  "recommendations": [
+    "biomejs.biome",
+    "antfu.iconify",
+    "bradlc.vscode-tailwindcss",
+    "naumovs.color-highlight"
+  ]
 }
